--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+
+    <!-- TODO: http://iconhandbook.co.uk/reference/examples/favicons/ -->
+	<!-- <link rel="icon" type="image/png" href="./assets/favicon.png" /> -->
+	<!-- <link rel="icon" type="image/gif" href="http://example.com/favicon.gif" /> -->
     <title>Astaria</title>
   </head>
   <body>
